# sommmelier

./: .gitignore  CLAUDE.md  README.md  modal_mmm.py  modal_mmm_full.py  pyproject.toml  requirements.txt  run_weekly.py
.claude/commands/: init.md  scenario.md  sommmelier.md  walkthrough.md
context/: README.md
data/: calibration_example.json
data/examples/: data_template.csv  sample_data.csv  sample_data_extended.csv
docs/: GETTING_STARTED.md
mmm/: __init__.py
mmm/analysis/: __init__.py  insights.py  reports.py  visualize.py
mmm/calibration/: __init__.py  calibration_data.py
mmm/cli/: __init__.py  main.py
mmm/data/: __init__.py  loader.py  schema.py  validator.py
mmm/model/: __init__.py  builder.py  mmm.py
mmm/recommendations/: __init__.py  engine.py  improvement_advisor.py
mmm/tracking/: __init__.py  model_quality.py
mmm/validation/: __init__.py  holdout.py
tests/: __init__.py  test_channel_detection.py  test_data_loader.py  test_holdout.py  test_priors.py
